--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -6,7 +6,7 @@
       </p>
       <%= link_to "by #{@prototype.user.name}", root_path, class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
-      <%= if user_signed_in? && current_user == @prototype.user %> 
+      <% if user_signed_in? && current_user == @prototype.user %> 
         <div class="prototype__manage">
           <%= link_to "編集する", edit_prototype_path(@prototype), class: :prototype__btn %>
           <%= link_to "削除する", delete_prototype_path(@prototype), method: :delete, class: :prototype__btn %>
