--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -2,7 +2,7 @@
   <% if prototype.image.attached? %>
     <%= link_to image_tag(prototype.image, class: :card__img), prototype_path(prototype) %>
   <% else %>
-    <%= link_to image_tag("実装課題４.png", class: :card__img), prototype_path(prototype) %>
+    <%= link_to image_tag("logo.png", class: :card__img), prototype_path(prototype) %>
   <% end %>
   <div class="card__body">
     <%= link_to prototype.title, prototype_path(prototype), class: :card__title %>
